--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cloudinary-react": "^1.8.1",
     "clsx": "^2.0.0",
     "formik": "^2.4.5",
+    "lightgallery": "^2.7.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-card-flip": "^1.2.2",
