feat(gallery): add gallery

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -10,5 +10,5 @@
     "src/helpers",
     "src/pages/main/QualificationPage/QualificationPage.jsx",
     "SelectInput"
-  ]
+, "src/constants/data/schedule.js"  ]
 }
