--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clsx": "^2.0.0",
     "formik": "^2.4.5",
     "lightgallery": "^2.7.2",
+    "markdown-to-jsx": "^7.4.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-card-flip": "^1.2.2",
@@ -28,6 +29,7 @@
     "react-dropzone": "^14.2.3",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.4",
+    "react-markdown": "^9.0.1",
     "react-quill": "^2.0.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.16.0",
