feat(gallery): fetch photo from api
add fetch photo , add filter buttns

--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "commit": "git-cz"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.10",
     "axios": "^1.6.1",
     "clsx": "^2.0.0",
     "lightgallery": "^2.7.2",
     "prop-types": "^15.8.1",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-card-flip": "^1.2.2",
     "react-dom": "^18.2.0",
