--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.10",
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.16.0",
     "axios": "^1.6.1",
+    "cloudinary-react": "^1.8.1",
     "clsx": "^2.0.0",
     "lightgallery": "^2.7.2",
     "prop-types": "^15.8.1",
